# webl234s5

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  config.json  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml
back/: __main__.py  authorize_user.py  config.py  main.py  rabbit.py
back/api/: __init__.py  auth.py  catalog.py  chat.py  feedback.py
back/schemes/: auth.py  basket.py  chat.py  feedback.py
database/: database.py  rabbit.py  redis.py
database/migrations/: env.py
database/migrations/versions/: 16d732e0af55_first_migration.py  18815fcc16f9_first_migration.py
database/models/: __init__.py  base.py  chat.py  feedback.py  message.py  product.py  user.py
database/repositories/: chat_repository.py  feedback_repository.py  message_repository.py  product_repository.py  user_repository.py
front/: .env.example  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
front/components/: ChatDrawer.vue  countPick.vue  count_peeker.vue  footer.vue  header.vue  office.vue
front/composables/: useMyFetch.js
front/middleware/: auth_routing.global.js  auth_routing.js
front/pages/: about.vue  catalog.vue  contacts.vue  index.vue
front/pages/auth/: login.vue  register.vue
front/plugins/: vue-yandex.client.ts
front/stores/: auth.js  basket.js  catalog.js  feedback.js
neural/: __main__.py  generator.py  rabbit.py
nginx/: nginx.conf
proxy/: main.js  package-lock.json
site/: __init__.py  config.py  main.py  token.py
site/api/: auth.py
static/db_base_data/: __main__.py
