[tool.poetry]
name = "webl234s5"
version = "0.1.0"
description = ""
authors = ["w1vern <bndvvl@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
fastapi-controllers = "^0.3.0"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
pyjwt = "^2.9.0"
werkzeug = "^3.1.0"
redis = "4.3.4"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
